# django-survey-app

./: AGENTS.md  ANALIZA.md  pyproject.toml
src/: db.sqlite3
src/core/: settings.py  urls.py
src/staticfiles/tasks/: digitspan.js  sart.js
src/survey/: admin.py  apps.py  forms.py  models.py  question_data.json  urls.py  views.py
src/survey/fixtures/: answer_options.json  contenttype.json  questions.json  sfvplatform.json
src/survey/migrations/: 0001_initial.py
src/survey/static/survey/css/: custom.css
src/survey/templates/: base.html
src/survey/templates/survey/: landing_page.html  survey_base.html  thank_you.html
src/tasks/: admin.py  models.py  urls.py  views.py
src/tasks/fixtures/: verbal_fluency.json
src/tasks/migrations/: 0001_initial.py  0002_sartresult.py  0003_verbalfluencycategory_verbalfluencyresult_and_more.py
src/tasks/static/tasks/: digitspan.js  sart.js  verbalfluency.js
src/tasks/templates/tasks/: digitspan.html  sart.html  verbalfluency.html
